kubernetes-master-loadbalance/nginx-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller-service
  namespace: ingress-nginx
  labels:
    k8s-app: nginx-ingress-controller-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 80
  - port: 443
    targetPort: 443
    nodePort: 443
  selector:
    app: ingress-nginx
