kubernetes-master-loadbalance/nginx-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels: 
    app: nginx-service
  namespace: ingress-nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
