kubernetes-master-loadbalance/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  labels: 
    app: grafana
  namespace: istio-system
spec:
  rules:
  - host: grafana.demo
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
