kubernetes-master-loadbalance/kubernetes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-ingress
  namespace: kube-system
spec:
  rules:
  - host: kube-master
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes
          servicePort: 443
