kubernetes-master-loadbalance/zipkin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zipkin-ingress
  labels: 
    app: zipkin
  namespace: istio-system
spec:
  rules:
  - host: zipkin.demo
    http:
      paths:
      - backend:
          serviceName: zipkin
          servicePort: 9411
